# docs/swagger.json
@@ -77,38 +77,6 @@
                         }
                     }
                 }
-            },
-            "patch": {
-                "description": "Update blogPost.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "BlogPosts"
-                ],
-                "summary": "update blogPost",
-                "parameters": [
-                    {
-                        "description": "BlogPost",
-                        "name": "blogPost",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.CreateBlogPostSchema"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "ok",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
             }
         },
         "/api/blog-post/{id}": {
@@ -166,6 +134,45 @@
                 "responses": {
                     "204": {
                         "description": "No Content"
+                    }
+                }
+            },
+            "patch": {
+                "description": "Update blogPost.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "BlogPosts"
+                ],
+                "summary": "update blogPost",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "blogPostId",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "BlogPost",
+                        "name": "blogPost",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.CreateBlogPostSchema"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.BlogPost"
+                        }
                     }
                 }
             }
